Start filter knop op nieuwspagina #8

--- a/nieuws.html
+++ b/nieuws.html
@@ -85,6 +85,7 @@
 
         <section class="home-news">
             <h2>Nieuws</h2>
+            <!-- Filter knop -->
             <button class="sort-button">Sorteer op nieuwste eerst<svg xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 640 640"><!--!Font Awesome Free 7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                     <path
