'S' achter H1 op homepagina #4

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welkom | Overlegplatform Associate degree</title>
+    <title>Welkom | Overlegplatform Associate degrees</title>
     <link rel="stylesheet" href="https://isaaceswa.github.io/look-and-feel-styleguide/styleguide-ad-connect.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -62,7 +62,7 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Welkom bij het Overlegplatform Associate degree</h1>
+            <h1>Welkom bij het Overlegplatform Associate degrees</h1>
             <p>Associate degrees (Ad’s) zijn tweejarige hbo-opleidingen die opleiden tot beroepskwalificerend
                 eindonderwijs.
                 Het eindniveau van de Ad sluit aan op EQF-/NLQF-niveau 5 en op de Dublin descriptoren short cycle. Een
