Kleuren aangepast en eigen styling genomen #3 | h2 vervangen door h1 #10

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Over ons | Overlegplatform Associate degree</title>
 
-    <link rel="stylesheet" href="https://isaaceswa.github.io/look-and-feel-styleguide/styleguide-ad-connect.css">
+    <!-- <link rel="stylesheet" href="https://isaaceswa.github.io/look-and-feel-styleguide/styleguide-ad-connect.css"> -->
     <link rel="stylesheet" href="styles/styles.css">
     <!-- DM Sans font 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -102,7 +102,7 @@
             </form>
 
             <div class="contact-information">
-                <h2>Neem contact op</h2>
+                <h1>Neem contact op</h1>
                 <h5>Contactadres</h5>
                 <p>platformassociatedegrees@outlook.com</p>
                 <br>
