--- a/nieuws.html
+++ b/nieuws.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nieuws | Overlegplatform Associate degree</title>
 
-    <link rel="stylesheet" href="https://isaaceswa.github.io/look-and-feel-styleguide/styleguide-ad-connect.css">
+    <!-- <link rel="stylesheet" href="https://isaaceswa.github.io/look-and-feel-styleguide/styleguide-ad-connect.css"> -->
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -61,7 +61,7 @@
         <section class="featured-half">
             <div class="featured-half-content">
                 <p class="subtitle">Nieuws</p>
-                <h2>Wat is er nieuw?</h2>
+                <h1>Wat is er nieuw?</h1>
                 <p>Vanuit het platform worden <b>regelmatig activiteiten</b> ondernomen, in grotere en kleinere
                     deelgroepen.
                     Heb je vanuit <b>jouw hogeschool/Ad opleiding</b> een bijeenkomst in de planning waarin kennisdelen
