--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welkom | Overlegplatform Associate degrees</title>
-    <link rel="stylesheet" href="https://isaaceswa.github.io/look-and-feel-styleguide/styleguide-ad-connect.css">
+    <!-- <link rel="stylesheet" href="https://isaaceswa.github.io/look-and-feel-styleguide/styleguide-ad-connect.css"> -->
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
