Hero dark overlay gedaan met CSS #9
Bron: https://www.youtube.com/watch?v=NwnZU6mWJkk

Daarnaast wilde de opdrachtgever het verschil van de donkere overlay naar de normale afbeelding in de featured half verminderen. Daarom heb ik er een gradient aan toegevoegd

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </header>
     <main>
-        <section class="hero">
+        <section class="hero overlay">
             <h1>Welkom bij het Overlegplatform Associate degrees</h1>
             <p>Associate degrees (Ad’s) zijn tweejarige hbo-opleidingen die opleiden tot beroepskwalificerend
                 eindonderwijs.
