--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
                 </article>
             </div>
-            <p class="btn-tertiair"><a href="../nieuws.html">Bekijk alle nieuwsberichten
+            <p class="btn-tertiair"><a href="./nieuws.html">Bekijk alle nieuwsberichten
                     <svg width="1.5em" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 640 640"><!--!Font Awesome Free 7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                         <path
